@@ -8,7 +8,6 @@ Lurking in the shadows and corners.
 
 FIX:
 
-Log scaling does not handle plots < 0. Need to add logic to handle it.
 
 
 
