@@ -25,7 +25,7 @@ to display. The available types are:</p>
 <h3>Bar Chart</h3>
 <p>The standard OHLC bar chart. Color is used to show up, down or no
 change status from the previous bar.</p>
-<img alt="blah" src="barchart.png">
+<img alt="Bar chart" src="barchart.png">
 <p></p>
 <h3>Paint Bar</h3>
 <p>Same as the Bar chart type except that the colors used are based on
@@ -35,15 +35,22 @@ based on the MACD indicator. Notice how when the red MACD line rises
 above the MACD yellow trigger line, the bars are green, meaning a buy
 alert. When the MACD falls below the MACD trigger line, the bars are
 colored red, meaning a sell alert.</p>
-<h3><img alt="blah" src="paintbarchart.png"> </h3>
+<h3><img alt="Paint bar chart" src="paintbarchart.png"> </h3>
 <p></p>
 <h3>Line</h3>
 <p>This chart is just a single line plot based on the days close value.</p>
-<p><img alt="blah" src="linechart.png"> </p>
+<p><img alt="Line chart" src="linechart.png"> </p>
 <p></p>
 <h3>Candlestick</h3>
-<p>This is the standard candlestick chart.</p>
-<p><img alt="blah" src="candlestickchart.png"> </p>
+<p>This is the standard candlestick chart.
+A solid (traditionally white) candle body means that the
+close was higher than the open.
+A hollow (traditionally black) candle body means that the
+close was lower than the open.
+Colour adds another dimension. Red is a lower close. Green is a higher close.
+Blue indicates no change from the previous close.
+</p>
+<p><img alt="Candle chart" src="candlestickchart.png" width="716" height="325"> </p>
 <p></p>
 <h3>Point and Figure</h3>
 <p>Qtstalker version of Point and Figure uses a general box sizing
@@ -54,7 +61,7 @@ colors. Color up is used for X's and Color Down is used for O's. Much
 easier to gauge at a glance and stays in keeping with other chart type
 uses of color. Note that Qtstalker uses a time based style that allows
 you to overlay indicators.</p>
-<p><img alt="blah" src="pointchart.png"> </p>
+<p><img alt="Point and figure chart" src="pointchart.png"> </p>
 <p></p>
 <p></p>
 <p></p>
@@ -63,7 +70,7 @@ you to overlay indicators.</p>
 <h3>Swing</h3>
 <p>This is the typical Gann type swing chart.</p>
 <p>
-<img src="swing.png" title="" alt=""
+<img src="swing.png" title="" alt="Swing chart"
  style="width: 722px; height: 604px;">
 </p>
 
